# qqbot

./: README.md
molisa/: .env.dev  .env.prod  README.md  bot.py  config.yml  password.encrypt  pyproject.toml  session.token
molisa/data/: image.db  video.db
molisa/data/draw_card/: fgo_card.json  genshin.json  genshin_arms.json  guardian_arms.json  pcr.json  pretty.json  pretty_card.json
molisa/data/leveldb-v2/: 000120.ldb  000365.ldb  000366.ldb  000367.ldb  000456.ldb  000457.ldb  000458.ldb  000459.ldb  000466.ldb  LOG  MANIFEST-000111  MANIFEST-000364  MANIFEST-000468
molisa/data/leveldb-v3/: 000084.ldb  000086.ldb  000088.ldb  000090.ldb  LOG  MANIFEST-000041
molisa/data/voices/: 0134F84E028563CC5E27A65EA94229B5.amr  03778983898FCEDBF6D5DA50727204E6.amr  0592E8460D4E64A01211BD0CE125A27E.amr  079311193F2D4C9BA28C6651A6326DCE.amr  07C153E046DFD1D463482C48D611F596.amr  0923D90849BB0F90B59850E2CB95711A.amr  09C2C84193E06B944AE0852AEF706165.amr  0AFD5D3EB79DA4864EDF8D17393B820E.amr  0C129FBAA51801B9805951A700E92B5A.amr  0D89AB7A4B7765EB6092871FB13BFAC5.amr  0F522BC87D7A27136000BE67920FC7C8.amr  101A6E7AE3FEC427548DE3DFB9D63670.amr  11A3501B741143369070FD005827C20F.amr  14AB45C4F7790FDC8A463B8FF307C27F.amr  1522DB09862CEDD42E61C0D5CA1440D7.amr  186506491FA6362B6893CE5D6F90AE82.amr  1B15B035-5652-A91C-EFAE-80FACB6A0433.amr  1CC952C6-E000-C282-E5ED-EACAE7E37993.amr  1E71A702-4ED9-9B4C-7F95-B4AABDBB399E.amr  1F2AA90EC56DD87C4BF4FD730BA96901.amr  20552B45-D1DE-78F8-E073-DAE3652267E0.amr  (+184 more)
molisa/dumps/: 1658215824.dump  1658304027.dump
molisa/src/plugins/: ai.py  (+16 more)
(+69 files in other folders)
