[tool.poetry]
name = "chuan"
version = "0.1.0"
description = "chuan"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_remake", "nonebot_plugin_boardgame", "nonebot_plugin_antiflash", "nonebot_plugin_color", "nonebot_plugin_randomtkk", "nonebot_plugin_pixiv", "leetcode", "nonebot_plugin_dailysign", "nonebot_plugin_gamedraw", "nonebot_plugin_simplemusic", "nonebot_plugin_minesweeper", "nonebot_plugin_horserace", "nonebot_plugin_imageutils", "nonebot_plugin_addFriend"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
